# deepsize

./: Cargo.toml
deepsize_derive/: Cargo.toml
src/: default_impls.rs  external_impls.rs  lib.rs
